--- a/src/styles/Widget.css
+++ b/src/styles/Widget.css
@@ -1,18 +1,3 @@
-/* .Widget {
-	margin: 1rem;
-	background-color: white;
-	font-family: "Heebo", sans-serif;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-}
-
-
-
-
-
-*/
-
 .Widget {
 	display: flex;
 	flex-direction: column;
@@ -37,6 +22,21 @@
 	justify-content: center;
 	align-items: center;
 	padding: 1rem;
+}
+.show-table {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-decoration: none;
+	padding: 4rem;
+}
+#show-lines {
+	font-family: "Heebo", sans-serif;
+	padding: 1rem;
+	background-color: var(--huddled-red);
+	color: white;
+	border: none;
+	font-size: large;
 }
 #go-back {
 	padding-bottom: 1rem;
